logos are no longer tiny on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@ a:hover {
 }
 
 .logo {
-  max-width: 4vh;
-  margin-top: -8px;
+  max-width: 70px;
+  margin-top: -15px;
 }
 
 .projectPic {
@@ -152,3 +152,12 @@ article {
 .end {
   height: 80px;
 }
+
+ /* Mobile Rendering 700px and below */
+ @media only screen and (max-width: 700px) {
+  .nav-menu {
+    color: blue;
+  }
+ }
+
+ 
